--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MiniProjet"
         tools:targetApi="31" >
+
         <activity
-            android:name=".MainActivity"
+            android:name=".DashboardActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +24,12 @@
         </activity>
         <activity
             android:name=".DemandeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SupportActivity"
+            android:exported="true" />
+        <activity
+            android:name=".FaqActivity"
             android:exported="true" />
     </application>
 
