--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
@@ -15,7 +16,7 @@
         tools:targetApi="31" >
 
         <activity
-            android:name=".DashboardActivity"
+            android:name=".activities.LoginActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,16 +25,25 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DemandeActivity"
+            android:name=".activities.SignUpActivity"
             android:exported="true" />
         <activity
-            android:name=".SupportActivity"
+            android:name=".activities.ForgotPasswordActivity"
             android:exported="true" />
         <activity
-            android:name=".FaqActivity"
+            android:name=".activities.DashboardActivity"
             android:exported="true" />
         <activity
-            android:name=".DetailsActivity"
+            android:name=".activities.DemandeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activities.SupportActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activities.FaqActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activities.DetailsActivity"
             android:exported="true" />
     </application>
 
