Need to answer the FAQ

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
         <activity
             android:name=".activities.DetailsActivity"
             android:exported="true" />
+        <activity
+            android:name=".activities.ProfileActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
